# TeachingMaterial

agents/: 1_openai_strict_json_mode.py  2_pydantic_ai_validation.py  3_openai_tool_calling.py  README.md  pyproject.toml  requirements.txt
embedding_work/: README.md  embeddings_demo.ipynb  main.py  pyproject.toml
timeseries/: intro-timeseries.ipynb
