[project]
name = "embedding-work"
version = "0.1.0"
description = "Demonstration of embeddings for natural language processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
